--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "ava": "ava | tap-diff",
     "ava:watch": "ava --watch | tap-diff",
     "nyc": "nyc --all npm run ava",
-    "lint": "eslint ./"
-  },  "repository": {
+    "lint": "eslint index.js lib && eslint -c ./.eslintrc-ava.yml tests",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "repository": {
     "type": "git",
     "url": "git@github.com:punchcard-cms/input-plugin-email.git"
   },
@@ -18,11 +20,14 @@
     "Scott Nath <snath@us.ibm.com>"
   ],
   "license": "Apache-2.0",
-  "dependencies": {},
+  "dependencies": {
+    "validator": "^5.2.0"
+  },
   "devDependencies": {
-    "ava": "^0.12.0",
-    "eslint": "2.2.0",
-    "eslint-config-punchcard": "^0.1.2",
+    "ava": "^0.14.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.10.0",
+    "eslint-config-punchcard": "^1.0.1",
     "nyc": "^6.0.0",
     "punchcard-content-types": "^0.1.0",
     "tap-diff": "^0.1.1"
